--- a/webang/bower.json
+++ b/webang/bower.json
@@ -10,7 +10,7 @@
     "angular-resource": "~1.0.7",
     "angular-cookies": "~1.0.7",
     "angular-sanitize": "~1.0.7",
-    "angular-strap": "~0.7.7"
+    "angular-bootstrap": "~0.6.0"
   },
   "devDependencies": {
     "angular-mocks": "~1.0.7",
